NEB-54 fix text unreadable in high contrast mode

--- a/src/app/v2/screens/rating-form-screen/rating-form-screen.component.hc.scss
+++ b/src/app/v2/screens/rating-form-screen/rating-form-screen.component.hc.scss
@@ -33,6 +33,7 @@
                 input {
                     background-color: #1223340D;
                     border: 1px solid #1223341A;
+                    color: #122334;
 
                     &::placeholder {
                         color: #122334;
@@ -43,6 +44,7 @@
 
             textarea {
                 background-color: #1223340D;
+                color: #122334;
 
                 &::placeholder {
                     color: #122334;
